Fix Prisma schema compatibility and build errors

--- a/シードスクリプトの実行方法.md
+++ b/シードスクリプトの実行方法.md
@@ -10,7 +10,7 @@ Prisma 7の仕様変更により、シードスクリプトの直接実行でエ
 
 1. Prisma Studioを起動：
    ```bash
-   cd date-guide
+   cd premier-date
    npm run db:studio
    ```
 
