--- a/セットアップチェックリスト.md
+++ b/セットアップチェックリスト.md
@@ -13,7 +13,7 @@
 1. [Supabase](https://supabase.com/) にアクセス
 2. アカウント作成（GitHubアカウント推奨）
 3. 新しいプロジェクトを作成
-   - **Name**: `date-guide`
+   - **Name**: `premier-date`
    - **Database Password**: **強力なパスワードを設定**（必ずメモ！）
    - **Region**: `Tokyo (Northeast Asia)`
    - **Pricing Plan**: `Free`
@@ -27,7 +27,7 @@
 
 ### Step 3: 環境変数の設定
 
-プロジェクトルート（`date-guide/`）に `.env` ファイルを作成し、以下を記述：
+プロジェクトルート（`premier-date/`）に `.env` ファイルを作成し、以下を記述：
 
 ```env
 # データベース接続URL（Step 2で取得したURL）
@@ -52,7 +52,7 @@ openssl rand -base64 32
 `.env` ファイルを作成したら、以下のコマンドを実行してください：
 
 ```bash
-cd date-guide
+cd premier-date
 
 # Prismaクライアントの生成
 npm run db:generate
