--- a/データベースセットアップ_手順書.md
+++ b/データベースセットアップ_手順書.md
@@ -17,7 +17,7 @@
 1. ダッシュボードで「New Project」をクリック
 2. 以下の情報を入力：
    - **Organization**: 既存のものか、新規作成
-   - **Name**: `date-guide`（任意の名前でOK）
+   - **Name**: `premier-date`（任意の名前でOK）
    - **Database Password**: **強力なパスワードを設定**（**必ずメモしておく！**）
    - **Region**: `Tokyo (Northeast Asia)` を選択（日本に近いため）
    - **Pricing Plan**: `Free` を選択
@@ -52,7 +52,7 @@ postgresql://postgres:mySecurePassword123!@db.abcdefghijklmnop.supabase.co:5432/
 
 ### 3-1. .envファイルの作成
 
-プロジェクトルート（`date-guide/`）に `.env` ファイルを作成します。
+プロジェクトルート（`premier-date/`）に `.env` ファイルを作成します。
 
 **重要**: `.env` ファイルは既に `.gitignore` に含まれているので、Gitにコミットされません。
 
@@ -85,7 +85,7 @@ NEXTAUTH_URL="http://localhost:3000"
 ### 4-1. Prismaクライアントの生成
 
 ```bash
-cd date-guide
+cd premier-date
 npm run db:generate
 ```
 
