--- a/データベース接続確認方法.md
+++ b/データベース接続確認方法.md
@@ -19,7 +19,7 @@ npx prisma db pull
 ### 1. マイグレーション状態の確認
 
 ```bash
-cd date-guide
+cd premier-date
 npx prisma migrate status
 ```
 
@@ -32,7 +32,7 @@ Database schema is up to date!
 ### 2. Prisma Studioでデータベースを確認
 
 ```bash
-cd date-guide
+cd premier-date
 npx prisma studio
 ```
 
@@ -41,7 +41,7 @@ npx prisma studio
 ### 3. データベーススキーマの確認
 
 ```bash
-cd date-guide
+cd premier-date
 npx prisma db pull
 ```
 
