--- a/接続問題_詳細確認.md
+++ b/接続問題_詳細確認.md
@@ -6,7 +6,7 @@
 
 Supabaseダッシュボードから、データベースに直接アクセスできるか確認してください：
 
-1. Supabaseダッシュボード → `date-guide` プロジェクトを選択
+1. Supabaseダッシュボード → `premier-date` プロジェクトを選択
 2. 左メニューから **「SQL Editor」** をクリック
 3. 新しいクエリをクリック
 4. 以下のSQLを入力：
