--- a/接続確認_手動テスト.md
+++ b/接続確認_手動テスト.md
@@ -27,7 +27,7 @@ psql "postgresql://postgres:dateguide202512@db.alnqctmakkhlzwezfibj.supabase.co:
 ## 方法3: Prisma Studioで確認
 
 ```bash
-cd date-guide
+cd premier-date
 npm run db:studio
 ```
 
