--- a/接続設定の確認手順.md
+++ b/接続設定の確認手順.md
@@ -4,7 +4,7 @@
 
 ### 1. Connection stringの取得方法
 
-1. Supabaseダッシュボード → `date-guide` プロジェクトを選択
+1. Supabaseダッシュボード → `premier-date` プロジェクトを選択
 2. 左メニュー → **「Settings」** → **「Database」**
 3. **「Connection string」** セクションを開く
 4. 以下の項目を確認：
